--- a/docs/intro.ipynb
+++ b/docs/intro.ipynb
@@ -9,13 +9,21 @@
     "\n",
     "This book started as a way to track my progress while learning Data Structures and Algorithms.\n",
     "\n",
-    "```{admonition} Live Code within the browser!\n",
+    "```{admonition} Why learn from here?\n",
     ":class: tip\n",
-    "The main feature that sets this online book apart from other resources is the \"Live Code\" option to write or test python code within the browser. Just click on the {fa}`rocket` icon and use the \"Live Code\" feature to edit or write Python code.\n",
+    "\n",
+    "✅**In-Browser Live Coding**: Jump straight into coding without the hassle of installations. Click on the {fa}`rocket` icon --> \"Live Code\", and instantly access a coding workspace within your browser, tailored to fortify your understanding of data structures and algorithms.\n",
+    "\n",
+    "✅**Advanced Visualizations**: Our platform takes learning a step further with [Manim CE](https://www.manim.community/), offering in-browser, interactive visualizations. This allows not just to view but also to manipulate and test algorithms with new test cases, offering a deeper understanding through dynamic, visual learning.\n",
+    "\n",
+    "✅**Interactive Algorithm Testing**: We go beyond static visualizations. Test and visualize new algorithms or modify existing ones with custom test cases directly within your browser, making complex concepts more accessible and understandable.\n",
+    "\n",
+    "✅**Unified Learning Platform**: We integrate live coding exercises with comprehensive learning materials, ensuring a seamless blend of theory and practical application.\n",
     "```\n",
     "\n",
     "## Testing the \"Live Code\" feature\n",
-    "All the code cells in this online book can be edited to strengthen your understanding on DSA. For example, try running the below cell using the \"Run\" button or \"Shift+Enter\""
+    "\n",
+    "Hit the {fa}`rocket` icon on the top of the page, then click \"Live Code\". Maximize your understanding of Data Structures and Algorithms through hands-on practice. Edit and execute code cells in real-time using the \"Run\" button or \"Shift+Enter\". Below is a quick intro to the \"Live Code\" feature."
    ]
   },
   {
@@ -37,6 +45,16 @@
     "arr = [1,2,3,4,5,6]\n",
     "print(arr)\n",
     "print(\"Hello World!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11ba82c7-3dbf-4d0d-875f-06dfaae72053",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from docs.manim_utils render_scene_with_quality\n"
    ]
   },
   {
@@ -64,7 +82,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
