--- a/docs/intro.ipynb
+++ b/docs/intro.ipynb
@@ -12,13 +12,9 @@
     "```{admonition} Why learn from here?\n",
     ":class: tip\n",
     "\n",
-    "✅**In-Browser Live Coding**: Jump straight into coding without the hassle of installations. Click on the {fa}`rocket` icon --> \"Live Code\", and instantly access a coding workspace within your browser, tailored to fortify your understanding of data structures and algorithms.\n",
+    "✅ **In-Browser Live Coding**: Jump straight into coding without the hassle of installations. Click on the {fa}`rocket` icon $\\rightarrow$ \"Live Code\", and instantly access a coding workspace within your browser, tailored to fortify your understanding of Data Structures and Algorithms.\n",
     "\n",
-    "✅**Advanced Visualizations**: Our platform takes learning a step further with [Manim CE](https://www.manim.community/), offering in-browser, interactive visualizations. This allows not just to view but also to manipulate and test algorithms with new test cases, offering a deeper understanding through dynamic, visual learning.\n",
-    "\n",
-    "✅**Interactive Algorithm Testing**: We go beyond static visualizations. Test and visualize new algorithms or modify existing ones with custom test cases directly within your browser, making complex concepts more accessible and understandable.\n",
-    "\n",
-    "✅**Unified Learning Platform**: We integrate live coding exercises with comprehensive learning materials, ensuring a seamless blend of theory and practical application.\n",
+    "✅ **Unified Learning Platform**: We integrate live coding exercises with comprehensive learning materials, ensuring a seamless blend of theory and practical application.\n",
     "```\n",
     "\n",
     "## Testing the \"Live Code\" feature\n",
@@ -48,8 +44,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9649a7e5",
+   "metadata": {},
+   "source": [
+    "```{admonition} Upcoming Features\n",
+    "🏗️ **Advanced Visualizations**: Our platform takes learning a step further with [Manim CE](https://www.manim.community/), offering in-browser, interactive visualizations. This allows not just to view but also to manipulate and test algorithms with new examples, offering a deeper understanding through dynamic, visual learning.\n",
+    "\n",
+    "🏗️ **Interactive Algorithm Testing**: We go beyond static visualizations. Test and visualize new algorithms or modify existing ones with custom examples directly within your browser, making complex concepts more accessible and understandable.\n",
+    "```\n",
+    "\n",
+    "### Example animation visualization check using Manim"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "88bc963e-959b-4f67-876c-ab323a55f4b5",
    "metadata": {},
    "outputs": [
@@ -59,7 +69,7 @@
        "\n",
        "        <div style=\"width: 100%;\">\n",
        "          <video width=\"100%\" controls>\n",
-       "              <source src=\"_static/videos\\Logo.mp4\" type=\"video/mp4\">\n",
+       "              <source src=\"_static/videos\\Logo_1708134130.mp4\" type=\"video/mp4\">\n",
        "              Your browser does not support the video tag.\n",
        "          </video>\n",
        "        </div>\n",
@@ -77,16 +87,17 @@
     "from manim_utils.logo import Logo\n",
     "from render_utils import render_scene_with_quality, render_local\n",
     "quality = \"-qh\"\n",
+    "# render_local(Logo, quality)\n",
     "render_scene_with_quality(Logo, quality)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4256b086",
+   "cell_type": "markdown",
+   "id": "553fb2f5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Manim animations are still in progress and shall be added in the future for each Algorithm."
+   ]
   }
  ],
  "metadata": {
